# sfml-material-editor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
cmake/: Tidy.cmake
editor/: CMakeLists.txt
editor/src/: ClipRectScopeGuard.hpp  ViewportScopeGuard.hpp  code-function.hpp  code-generator.hpp  configs.cpp  configs.hpp  constants.hpp  dialog-utils.hpp  file-utils.hpp  float-field.hpp  formatting.hpp  graph-editor.hpp  graph-utils.hpp  graph.hpp  id-pool.hpp  main.cpp  map-list-box.hpp  material-editor.hpp  material-tab.hpp  preview.hpp  shortcuts.hpp  string-utils.hpp  value.hpp
editor/src/formatting/Private/: EvenlyPlaceStrategy.h  FastAndSimplePositioningStrategy.cpp  FastAndSimplePositioningStrategy.h  FormatterBlueprintLibrary.cpp.exlcude  FormatterBlueprintLibrary.h  FormatterGraph.cpp  FormatterGraph.h  FormatterLog.h  FormatterModule.cpp.exclude  FormatterStyle.h  NewGraphAdapter.cpp.exclude  NewGraphAdapter.h  PrivateAccessor.h  UEGraphAdapter.cpp  guid.hpp
editor/src/formatting/graph_layout/: graph_layout.cpp
editor/src/nodes/: append.hpp  archetype.hpp  archetypes.hpp  binary-op.hpp  break-vec.hpp  bridge.hpp  builtin-func.hpp  code.hpp  constants.hpp  expression.hpp  input.hpp  make-vec.hpp  noise.hpp  noise_funcs.hpp  output.hpp  parameter.hpp  random.hpp  scalar-value.hpp  texture-sample.hpp  vec-value.hpp
examples/: example.mlsp  example2.mlsp  main.cpp
include/mls/: base64.hpp  material.hpp  serializer.hpp  sfml-serialization.hpp  variant-emplace.hpp
src/: ViewportScopeGuard.hpp  base64.hpp  code-generator.hpp  configs.cpp  configs.hpp  file-utils.hpp  formatting.hpp  graph-editor.hpp  graph-utils.hpp  graph.hpp  imgui-utils.hpp  main.cpp  map-list-box.hpp  material-editor.hpp  material-tab.hpp  material.cpp  material.hpp  preview.hpp  serializer.hpp  sfml-serialization.hpp  shortcuts.hpp  value.hpp
src/ImGuiColorTextEdit/: TextEditor.cpp
src/editor/: cousine.hpp
src/formatting/Private/: EvenlyPlaceStrategy.cpp  Formatter.cpp  Formatter.h  FormatterCommands.cpp.exclude  FormatterCommands.h  FormatterLog.cpp.exclude  FormatterSettings.cpp  FormatterSettings.h  FormatterStyle.cpp.exclude  IPositioningStrategy.h  PriorityPositioningStrategy.cpp  PriorityPositioningStrategy.h  RectHelper.hpp  UEGraphAdapter.h
src/formatting/graph_layout/: graph_layout.h
src/nodes/: add.hpp  append.hpp  archetype.hpp  archetypes.hpp  binary-op.hpp  break-vec.hpp  bridge.hpp  builtin-func.hpp  constants.hpp  expression.hpp  input.hpp  make-vec.hpp  output.hpp  parameter.hpp  scalar-value.hpp  texture-sample.hpp  value.hpp  vec-value.hpp
